--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "node_modules/babel-cli/bin/babel.js src --out-dir build",
     "start": "npm run build && node build/index.js",
     "lint": "node_modules/eslint/bin/eslint.js src",
-    "pack": "npm run build && nexe -i build/index.js -o bin/cUpdateBmcTool -r 6.2.0"
-  },
+    "pack32": "npm run build && node_modules/enclose/bin/enclose.js -l info -a x86 -o bin/cUpdateBmcTool_x86 build/index.js",
+    "pack64": "npm run build && node_modules/enclose/bin/enclose.js -l info -a x64 -o bin/cUpdateBmcTool_x64 build/index.js"
+	},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nimo1491/node-update-bmc-tool.git"
   },
   "author": "Nimo Hsieh <nimo1491@gmail.com>",
-	"license": "Apache-2.0",
+  "license": "Apache-2.0",
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
@@ -22,6 +23,7 @@
     "babel-plugin-transform-es2015-for-of": "^6.8.0",
     "babel-plugin-transform-regenerator": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
+    "enclose": "^2.1.0",
     "eslint": "^3.1.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.11.1",
